splash fix overflow

--- a/userlist/src/app/user-detail/user-detail.component.scss
+++ b/userlist/src/app/user-detail/user-detail.component.scss
@@ -5,6 +5,7 @@
   border: 1px solid var(--unnamed-color-ffffff);
   opacity: 1;
   border-radius: 6px;
+  overflow-y: auto;
 }
 
 .container__content {
